# space_explorer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TODO.md  find_namespaces  raw_memory.h
assets/models/iphone/: Iphone_seceond_version_finished.mtl
include/: button.h  camera.h  clock.h  command.h  commands.h  context_manager.h  ctx_sdl.h  custom_deleters.h  debug.h  event_handler.h  game.h  game_state.h  gl_window.h  helper_functions.h  helper_macros.h  icosphereGenerator.hpp  input_manager.h  instance_data.h  instanced_renderer.h  mesh.h  mesh_generator.h  model.h  movement_state.h  n_body_predef.h  object.h  object_info.h  player_controller.h  renderable.h  renderer.h  scene.h  sdl_video.h  shader.h  simulation_state.h  window_manager.h
include/commands/directional_light/: change_state.h
include/commands/move_camera/: backward.h  down.h  forward.h  left.h  right.h  up.h
include/commands/simulation/: running.h
include/commands/window/: close.h
include/common/: fwd.h  mesh.h  scoped_resource_handle.h  to_raw_data.h  vertex.h
include/components/: component.h
include/core/: clock.h  fwd.h  game.h  game_state.h
include/core/camera/: camera.h  movement_state.h  player_controller.h
include/core/shader/: shader.h
include/cuda_types/: buffer.h  cuda_from_gl_data.h  error.h  exception.h  resource.h  resource_description.h  stream.h  surface.h
include/cuda_types/from_gl/: buffer.h  image.h
include/deleters/: custom_deleters.h
include/device_types/: device_ptr.h  i_event.h  i_queue.h
include/device_types/cuda/: buffer.h  error.h  event.h  exception.h  fwd.h  resource.h  resource_description.h  stream.h  surface.h
include/entity_management/: entity_id.h  entity_manager.h  fwd.h
include/game_states/: fwd.h  playing_state.h
include/graphics/: gl_context_lock.h  instanced_data.h  instanced_data_buffer.h  mesh.h  vertex.h
include/helper/: clock.h  fwd.h  helper_functions.h  helper_macros.h
include/n_body/: drawable_space_object.h  fwd.h  i_n_body_data_manager.h  i_n_body_resource_manager.h  i_n_body_simulator.h  interaction_system.h  launch_leapfrog.h  leapfrog_kernels.h  n_body_factory.h  n_body_predef.h  physics_component.h  simulation_state.h  space_object.h
include/n_body/cuda/: fwd.h  interaction_system.h  n_body_resource_manager.h  n_body_simulator.h  object_data_view.h  pending_action.h  simulation_state.h
include/n_body/physics/: launch_leapfrog.h  leapfrog_kernels.h  space_object.h
include/objects/: cube.h  drawable_space_object.h  interaction_system.h  n_body_predef.h  space_object.h  sphere.h
include/rendering/: fwd.h  render_command.h  renderer.h  vertex.h  visual_component.h
include/rendering/shader/: shader.h
include/smartPointers/: raw_memory.h
include/smartPointers/raw/: fwd.h  helper.h  hub.h  shared_ptr.h  smart_ptr_base.h  unique_ptr.h  weak_ptr.h
include/sphere_generation/: basic_geomerty.h  cuda_buffer.h  cuda_from_gl_data.h  fwd.h  generation_context.h  i_sphere_generator.h  i_sphere_resource_manager.h  icosahedron_data_manager.h  kernel_launcher.h  mesh_generator.h  sphere_generator.h  tesselation_kernel.h  tessellation_kernel.h
include/sphere_generation/cuda/: fwd.h  icosahedron_data_manager.h  kernel_launcher.h  sphere_generator.h  sphere_resource_manager.h  tessellation_kernel.h
include/texture_generation/: fwd.h  generation_recipe_component.h  generator.h  i_planet_resource_manager.h  lru_cache.h
include/texture_generation/cuda/: fwd.h  planet_resource_manager.h  planet_source.h
include/textures/: fwd.h  generator.h  lru_cache.h  manager.h  planet_dna.h  streaming.h
include/textures/data_type/: compressed_cpu_texture.h  opengl_texture.h
include/unused/: button.h  event_handler.h  input_manager.h  object.h
include/unused/objects/: cube.h
include/window/: fwd.h  gl_context_lock.h  gl_loader.h  gl_window.h  sdl_video.h
include/z_unused/: button.h  command.h  event_handler.h  input_manager.h  object.h  object_info.h
include/z_unused/objects/: cube.h  sphere.h
raw/: fwd.h  helper.h  hub.h  smart_ptr_base.h  unique_ptr.h
src/: button.cpp  camera.cpp  clock.cpp  context_manager.cpp  ctx_sdl.cpp  custom_deleters.cpp  event_handler.cpp  game.cpp  gl_window.cpp  input_manager.cpp  instance_data.cpp  main.cpp  mesh.cpp  mesh_generator.cu  model.cpp  object.cpp  object_info.cpp  player_controller.cpp  renderable.cpp  renderer.cpp  scene.cpp  sdl_video.cpp  shader.cpp  simulation_state.cpp  window_manager.cpp
src/commands/directional_light/: change_state.cpp
src/commands/move_camera/: backward.cpp  down.cpp  forward.cpp  left.cpp  right.cpp  up.cpp
src/commands/simulation/: running.cpp
src/commands/window/: close.cpp
src/core/: clock.cpp  game.cpp
src/core/camera/: camera.cpp  player_controller.cpp
src/cuda_types/: resource.cpp  stream.cpp
src/cuda_types/from_gl/: image.cpp
src/deleters/: custom_deleters.cpp
src/device_types/cuda/: event.cpp  resource.cpp
src/entity_management/: entity_id.cpp  entity_manager.cpp
src/game_states/: playing_state.cpp
src/graphics/: mesh.cpp
src/n_body/: drawable_space_object.cpp  interaction_system.cpp  launch_leapfrog.cu  leapfrog_kernels.cu  simulation_state.cpp  space_object.cpp
src/n_body/cuda/: n_body_resource_manager.cu
src/n_body/physics/: launch_leapfrog.cu  leapfrog_kernels.cu
src/objects/: cube.cpp  drawable_space_object.cpp  interaction_system.cpp  space_object.cpp  sphere.cpp
src/rendering/: renderer.cpp
src/rendering/shader/: shader.cpp
src/shaders/: color_shader.frag  vertex_shader.glsl
src/shaders/light/: color_shader.frag
src/shaders/models/: color_shader.frag  vertex_shader.glsl
src/sphere_generation/: cuda_from_gl_data.cpp  generate_context.cpp  i_sphere_generator.cpp  icosahedron_data_manager.cpp  launch_tesselation.cu  launch_tessellation.cu  mesh_generator.cpp  sphere_generator.cpp  tessalation_kernel.cu  tessellation_kernel.cu
src/textures/: manager.cpp  sreaming.cpp
src/window/: gl_window.cpp  sdl_video.cpp
src/z_unused/: button.cpp  input_manager.cpp  object.cpp  object_info.cpp
(+22 files in other folders)
